<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ByeHi</string>
    <string name="MAP_API_KEY">AIzaSyBahgOi1QI-R5rtXJFfViXlMIUFHFrm_Rg</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="facebook_client_token">ff98f6e1e7cc15eddd367e39846563e1</string>
    <string name="facebook_app_id">550540026317755</string>
    <string name="fb_login_protocol_scheme" tools:ignore="MissingTranslation">fb550540026317755</string>
    <string name="reset_pass">Firstly enter a current password\nThen entered a new password &amp;\nconfirm password.></string>
    <string name="ok">OK</string>
    <string name="required">Is required?</string>
    <string name="required1">Password not match?</string>
    <string name="select_location">Location</string>
    <string name="type_a_message">Type a Message</string>
    <string name="rate_us_on_the_app_store">Rate us on the App store</string>
    <string name="like_us_on_the_facebook">Like us on the Facebook</string>
    <string name="legal">Legal</string>
    <string name="account">Account</string>
    <string name="olivia_parker">Olivia Parker</string>
    <string name="edit_account">Edit Account</string>
    <string name="saved_places">Saved Places</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="delete_data"> I want to delete my account</string>
    <string name="delete_data_title"> Confirm</string>
    <string name="delete_data_info"> When you delete your account your data will also be deleted. Are you sure you want to delete your account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset password</string>
    <string name="test">Test</string>
    <string name="provider_status">Provider Status</string>
    <string name="no_pickup_status">No Pickup Status</string>
    <string name="_4_av_6_beswarade">4 av 6 beswarade</string>
    <string name="starting_date_10_07_2019">Starting date: 10/07/2019</string>
    <string name="time_9_30am">Time: 9:30am</string>
    <string name="online">online</string>
    <string name="accept_order_0_30">Accept Order (0:30)</string>
    <string name="_4_2_200">{4.2} 200</string>
    <string name="order_1546897562">Order: 1546897562</string>
    <string name="_24years">24Years</string>
    <string name="neil_woods">Neil Woods</string>
    <string name="cancel">Cancel</string>
    <string name="username">UserName</string>
    <string name="first_name">First Name</string>
    <string name="update">Update</string>
    <string name="edit_product">Edit Product</string>
    <string name="upload">Upload</string>
    <string name="status">Status</string>
    <string name="available">Available</string>
    <string name="sold_out">Sold Out</string>
    <string name="delete_post">Delete Post</string>
    <string name="tell_the_donor_why_do_you_want_this_product">Tell the donor why do you want this product..?</string>
    <string name="send">Send</string>
    <string name="i_am_new">I am new</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_your_account">Login your Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_with_social_media">Continue with social media</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="browse_by_product">Browse By Product</string>
    <string name="feedback">Feedback</string>
    <string name="leave_a_rating_help_us_improve">Leave a rating, help us improve!</string>
    <string name="write_hear_feedback">Write hear feedback</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="support">FAQ Support</string>
    <string name="tutorials">Tutorials of App</string>
    <string name="or_go_to_nour_office_in">Or go to\nour Office in</string>
    <string name="thank_you_for_nyour_donation">Thank you for\nyour Donations</string>
    <string name="you_win_n30_points">You win\n3 Coins</string>
    <string name="your_foundations">Your Foundations</string>
    <string name="today">Today</string>
    <string name="kndgfkdfgkjfdg_h_gh_kmghm_kmgfhk_kfh_mgh_fgh_mkgf_hkmf_ghkhmkmk_kmghk_f_ghk_gkh_k_gk_g_k_k_kmkg_hkmgmhkmh_km">kndgfkdfgkjfdg h,gh kmghm kmgfhk kfh mgh fgh mkgf hkmf ghkhmkmk kmghk f ghk gkh k gk g k k kmkg hkmgmhkmh km</string>
    <string name="_5_min_ago">5 min ago</string>
    <string name="_1_min_ago">1 min ago</string>
    <string name="chat_request">Chat Request</string>
    <string name="product_name">Product Name</string>
    <string name="staus">Staus:</string>
    <string name="continueq">Continue</string>
    <string name="emails">EMAIL</string>
    <string name="submits">Submit</string>
    <string name="org_name">Org Name</string>
    <string name="e_mail">E-mail</string>
    <string name="mobile">Mobile</string>
    <string name="no_request">No Request</string>
    <string name="browse_by_category">Browse by category</string>
    <string name="messages">Messages</string>
    <string name="chat_enquiry">Chat Enquiry</string>
    <string name="seller_chat">Requester Chat</string>
    <string name="buyer_chat">Donor Chat</string>
    <string name="you_will_need_to_pay_for_the_delivery">You will need to pay for the delivery</string>
    <string name="hello_before_everything_ntell_us_what_do_you_want_to_do">Hello, before everything,\ntell us what do you want to do?</string>
    <string name="donate_to_the_free_store">DONATE TO THE FREE STORE</string>
    <string name="donate_to_a_foundaton">DONATE TO A NON PROFIT</string>
    <string name="donate_to_bai_hai">DONATE TO BYE-HI</string>
    <string name="available_foundations">Available Foundations</string>
    <string name="nicolas_medellin">Rhoshandiatellyneshiunnebeshenk ortiz barreto</string>
    <string name="donations">Donations</string>
    <string name="awards">Awards</string>
    <string name="points">Points</string>
    <string name="give_free_stuff">GIVE FREE STUFF</string>
    <string name="get_free_stuff">GET FREE STUFF</string>
    <string name="volunteer_with_nbai_hai">VOLUNTEER WITH\nBYE-HI</string>
    <string name="subscribe_your_foundation">SUBSCRIBE A NON PROFIT</string>
    <string name="no_result">No Result</string>
    <string name="payment_ammount">Payment Amount</string>
    <string name="cardholder_name">Cardholder name</string>
    <string name="card_number">Card number</string>
    <string name="expiry_date">Expiry date</string>
    <string name="cvv">CVV</string>
    <string name="amount">Amount</string>
    <string name="_14256489">14256489</string>
    <string name="_50">$50</string>
    <string name="voren_voren">Voren Voren</string>
    <string name="description_of_the_activities_performed_by_nthe_foundation_you_want_to">Description of the activities performed by \nthe foundation you want to?</string>
    <string name="go_personally_to_donate">GO PERSONALLY TO DONATE</string>
    <string name="someone_pick_up_my_donation">SOMEONE PICK UP MY DONATION</string>
    <string name="you_will_need_to_pay_for_nthe_delivery">You will need to pay for\nthe delivery</string>
    <string name="conitnue">Conitnue</string>
    <string name="dummy_text_is_the_text_that_is_used_in_the_publishing_industery_or_by_web_designers_to_occupy_the_space_which_will_later_be_filled_with_real_content_this_is_required_when_for_example_the_final_text_is_not_avaliable">Dummy text is the text that is used in the Publishing industery or by web designers to occupy the space which will later be filled with real content. This is required when, for example, the final text is not avaliable.</string>
    <string name="let_the_donor_know_why_you_nwant">request product</string>
    <string name="take_a_pic">Add product Image\s:</string>
    <string name="n">N</string>
    <string name="y">Y</string>
    <string name="search">Search</string>
    <string name="subscribe_s_your_norganization">Subscribes your Non Profit.?</string>
    <string name="name_of_the_organization">Name of the Non Profit</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="name_of_contact">Name of contact</string>
    <string name="what_does_the_org_do">What does the org do ?</string>
    <string name="my_donation">My Donation</string>
    <string name="donate_now">Donate Now</string>
    <string name="what_product_ndo_you_want_to_donate">What product, \ndo you want to donate?</string>
    <string name="product">Product</string>
    <string name="size">Size</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="id_545697890">ID:545697890</string>
    <string name="address">Address</string>
    <string name="product_details">Product Details</string>
    <string name="papaya">Papaya</string>
    <string name="cheese_sliced_president">Cheese Sliced President</string>
    <string name="name">Name</string>
    <string name="pending">Pending</string>
    <string name="i_m_intrusted_in_your_product_can_we_chat_now">I am entrusted in your Product, Can we chat now?</string>
    <string name="rejected">Rejected</string>
    <string name="accept">Accept</string>
    <string name="_2020_10_07_06_05_04">2020–10–07 06:05:04</string>
    <string name="request">Request</string>
    <string name="_1">1</string>
    <string name="bicycle">Bicycle</string>
    <string name="description">Description</string>
    <string name="descriptions">Description:</string>
    <string name="names">name</string>
    <string name="seller">Donor:</string>
    <string name="abcd_xyz">ABCD XYZ</string>
    <string name="view_as">View as:</string>
    <string name="height">Height</string>
    <string name="miami_florida">Miami, Florida</string>
    <string name="sport">Sport</string>
    <string name="technology">Technology</string>
    <string name="furniture">Furniture</string>
    <string name="tools">Tools</string>
    <string name="toys">Toys</string>
    <string name="cutlery">Cutlery</string>
    <string name="vehicles">Vehicles</string>
    <string name="done">Done</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="_05_miles">05 Miles</string>
    <string name="_10_miles">10 Miles</string>
    <string name="_15_miles">15 Miles</string>
    <string name="_20_miles">20 Miles</string>
    <string name="_25_miles">25 Miles</string>
    <string name="product_image">Product Image</string>
    <string name="back">Back</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="choose_lang">Choose language</string>
    <string name="Add_Product">Add Product</string>
    <string name="message">Message:</string>
    <string name="instaShare">Like us on the Instagram</string>
    <string name="shareApp">Share</string>
    <string name="rewards_poinr">Your Reward Coins</string>
    <string name="your_reward">Your Rewards</string>
    <string name="msg">Congratulations</string>
    <string name="enter_ammount">Enter amount</string>
    <string name="orderId">OrderNo</string>
    <string name="organame">Foundation</string>
</resources>