<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/foundationCardId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/singleRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">


            <ImageView
                android:id="@+id/userImg"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/logo" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@+id/userImg"
                android:layout_toRightOf="@+id/userImg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/org_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:text="@string/org_name"
                        android:textSize="15sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/contact_name"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:text="@string/name"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:text="@string/e_mail"
                        android:textSize="14sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:text="@string/address"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/mobile"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:text="@string/mobile"
                        android:textSize="14sp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/description"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/description"
                    android:textSize="14sp" />


            </LinearLayout>


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/singleRow"
            android:background="#f2f2f2" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>

