<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:id="@+id/linear_subCat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_doseId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp"
        app:cardMaxElevation="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/foundation_orderid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orderId"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/foundation_orgname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/organame"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/foundation_productname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/_5sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/foundation_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/amount"
                        android:textColor="@color/colorGreen"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/foundation_statusId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/status"
                        android:textColor="@color/colorGreen"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>


            <TextView
                android:id="@+id/foundation_dateTimeId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/starting_date_10_07_2019"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorGreen"
                android:textSize="@dimen/_11sdp"
                android:textStyle="normal" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>

</layout>
