<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".activity.AboutUsActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/about_us"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorLightGray"
        android:onClick="RateOnPlayStoreInit"
        android:padding="12dp"
        android:text="@string/rate_us_on_the_app_store"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorLightGray"
        android:onClick="faceBookLike"
        android:padding="12dp"
        android:text="@string/like_us_on_the_facebook"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorLightGray"
        android:onClick="instaShare"
        android:padding="12dp"
        android:text="@string/instaShare"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="normal" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorLightGray"
        android:padding="12dp"
        android:text="@string/legal"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="normal"
        android:onClick="LegalInfo"/>
    <!--  <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/_10sdp"
          android:layout_marginRight="@dimen/_20sdp"
          android:layout_marginLeft="@dimen/_20sdp"
          android:orientation="vertical">

      <VideoView
          android:layout_width="match_parent"
          android:layout_height="@dimen/_200sdp"

          android:id="@+id/exerciseVideo" />

      </LinearLayout>-->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        app:cardBackgroundColor="@color/colorLightGray"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp"
        app:cardMaxElevation="@dimen/_5sdp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_margin="@dimen/_5sdp">

            <VideoView
                android:id="@+id/videoview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="bottom"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@mipmap/ic_appnew" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="v.0.1"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_16sdp" />

    </LinearLayout>

</LinearLayout>